[tool.poetry]
name = "bacnetsim"
version = "0.1.0"
description = ""
authors = ["Christian"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
BAC0="^2025.9.15"
aiohttp="*"
fastapi="^0.121.0"
uvicorn="*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
